--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "Rocco Sada",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon src/.",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start":"node src/.",
+    "dev": "nodemon src/."
   },
   "repository": {
     "type": "git",
