--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Rocco Sada",
   "main": "index.js",
   "scripts": {
-    "start":"node src/.",
+    "start": "node src/.",
     "dev": "nodemon src/."
   },
   "repository": {
@@ -18,6 +18,7 @@
   },
   "homepage": "https://github.com/Sadac/mazos#readme",
   "dependencies": {
+    "cors": "^2.8.5",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "http-errors": "^1.8.0",
